# moor

./: .dockerignore  .gitignore  .licensure.yml  CLA.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Dockerfile  Dockerfile.arm64-cross  README.md  bacon.toml  docker-compose.yml  dprint.json  moor-dev.yaml  package-lock.json  package.json  single-process-deployment.md
.forgejo/workflows/: build-deb-packages.yml  elle-consistency-check.yml  license-check.yml  release-build-and-publish.yml  rust-build.yml
.github/workflows/: ci.yml  deploy-check.yml  elle.yml  migrate-container-images.yml  release-publish.yml
book/: LICENSE.md  README.md  build-single-page.sh
book/src/: SUMMARY.md  foreword.md  history-of-moos.md  introduction.md  legal.md  moo-resources.md  moor-architecture.md  the-built-in-command-parser.md  the-database.md  the-moo-programming-language.md
book/src/the-database/: creating-and-recycling-objects.md  entity-metadata.md  flyweights.md  moo-value-types.md  object-movement.md  object-parents-and-children.md  object-properties.md  object-verbs.md  objects-in-the-moo-database.md  transactions.md
book/src/the-moo-programming-language/: built-in-functions.md  calling-verbs.md  error-handling.md  extensions.md  lambda-functions.md  list-comprehensions.md  moo-language-expressions.md  moo-language-statements.md  networking.md  performance-tuning-moo-code.md  syntax-summary.md  task-permissions-and-capability-grants.md  variables.md  webhooks.md  xml-documents.md
book/src/the-system/: alternative-installation-methods.md  bootstrapping-from-source.md  clustered-deployment.md  docker-compose-setup.md  (+15 more)
book/theme/: moo-syntax-highlight.js  pagetoc.js
clients/: README.md
clients/meadow/: .gitignore  Dockerfile  LICENSE  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
clients/meadow/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
clients/meadow/src-tauri/capabilities/: default.json
clients/meadow/src-tauri/src/: lib.rs  main.rs
clients/meadow_flutter/: .gitignore  .metadata  AGENTS.md  README.md  analysis_options.yaml  nginx-ssl.conf  pubspec.yaml
clients/moor-web-mcp/: package-lock.json  package.json
clients/web-sdk/: README.md  package-lock.json  package.json
cores/benches/: Makefile
cores/cowbell/: .gitignore  .gitmodules  CAPABILITIES.md  COMMAND_ERROR_HANDLING_AUDIT.md  Makefile  README.md  RUNTIME_TESTING.md  STYLE_GUIDE.md  arch_wizard.moo  build.sh  constants.moo  docker-compose.yml  object_0.moo  password.moo  player.moo  programmer.moo  room.moo  root.moo  string.moo  sub_documentation.md  wizard.moo
cores/minimal-core/: Makefile  README.md
crates/: README.md
crates/builtin-docs-macro/: Cargo.toml  README.md
crates/common/: Cargo.toml  README.md  build.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/benches/: compile_benches.rs  objdef_benches.rs
crates/compiler/src/: ast.rs  codegen.rs  codegen_tests.rs  compile_options.rs  moo.pest  objdef.rs  objdef_literal.rs
crates/compiler/src/backend/: control.rs  emitter.rs  expr_codegen.rs  lambda_codegen.rs  operands.rs  stack.rs  state.rs  stmt_codegen.rs
crates/compiler/src/decompile/: mod.rs
crates/compiler/src/frontend/: cst.rs  kinds.rs  lower.rs  mod.rs  parser.rs
crates/compiler/src/tests/: frontend_sharp_edges.rs
crates/compiler/src/unparse/: expr.rs  mod.rs
crates/compiler/tests/: deep_objdef_stack.rs
crates/curl-worker/: Cargo.toml  README.md
crates/curl-worker/src/: lib.rs  main.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/debian/: moor-config.yaml  moor-daemon-config.yaml
crates/daemon/debian/moor-scripts/: postinst
crates/daemon/src/: allowed_hosts.rs  args.rs  feature_args.rs  lib.rs  main.rs  system_control.rs
crates/daemon/src/connections/: fjall_registry.rs  registry.rs
crates/daemon/src/enrollment/: mod.rs
crates/daemon/src/event_log/: event_log.rs
crates/daemon/src/rpc/: api_codec.rs  daemon_api_impl.rs  hosts.rs  message_handler.rs  message_handler_auth.rs  message_handler_history.rs  message_handler_tasks.rs  mod.rs  server.rs  session.rs  transport.rs
crates/daemon/src/runtime/: api.rs  local_client.rs  local_events.rs  mod.rs  services.rs
crates/daemon/src/tasks/: task_monitor.rs
crates/daemon/src/testing/: backend_parity_test.rs  mock_transport.rs  mod.rs  rpc_integration_test.rs  scheduler_integration_test.rs  test_env.rs
crates/daemon/src/workers/: message_handler.rs
crates/db/: Cargo.toml  README.md
crates/kernel/: Cargo.toml  README.md
crates/mcp-host/: Cargo.toml  README.md
crates/objdef/: Cargo.toml  README.md
crates/runtime-api/: Cargo.toml  README.md
crates/runtime-api/src/: api.rs  api_codec.rs  errors.rs  lib.rs  task_client.rs  worker.rs
crates/schema/: Cargo.toml  README.md
crates/schema-macros/: Cargo.toml  README.md
crates/server/: Cargo.toml  README.md
crates/server/debian/: moor.service
crates/server/debian/scripts/: postrm  prerm
crates/server/src/: local_client.rs  local_events.rs  local_runtime.rs  local_services.rs  main.rs
crates/server/tests/: single_process_smoke.rs
crates/telnet-host/: Cargo.toml  README.md
crates/textdump/: Cargo.toml  README.md
crates/var/: Cargo.toml  README.md
crates/vm/: Cargo.toml  README.md
crates/web-host/: Cargo.toml  OAUTH2_SETUP.md  README.md  web-host-oauth2-example.yaml  web-host-oauth2-minimal.yaml
crates/zmq-client/: Cargo.toml  README.md
deploy/: Dockerfile-forgejo-builder  README.md  test-all.sh  test-helpers.sh
deploy/clustered/: docker-compose.tcp.yml  docker-compose.tracing.yml
deploy/debian-packages/: README.md  build-all-packages.sh  test.sh
deploy/release/: build-packages.sh
deploy/single-process/: README.md
doc/: TRACING.md  UNIFICATION_BUILTINS.md  entity-metadata-api.md  objdef-changelist-analysis.md
docs/: github-migration.md
scripts/: daemon.sh  start-moor-cowbell.sh  start-moor-lambdacore.sh
tools/: moo-mode.el
tools/moor-emh/: Cargo.toml
tools/moorc/: Cargo.toml
tools/moot-lang/: package.json
(+814 files in other folders)
