[workspace]
resolver = "2"
members = [
    "crates/builtin-docs-macro",
    "crates/common",
    "crates/compiler",
    "crates/curl-worker",
    "crates/daemon",
    "crates/db",
    "crates/kernel",
    "crates/mcp-host",
    "crates/objdef",
    "crates/runtime-api",
    "crates/schema",
    "crates/schema-macros",
    "crates/server",
    "crates/telnet-host",
    "crates/testing/lambdamoo-harness",
    "crates/testing/load-tools",
    "crates/testing/moot",
    "crates/textdump",
    "crates/var",
    "crates/vm",
    "crates/web-host",
    "crates/zmq-client",
    "tools/moor-emh",
    "tools/moorc",
]
default-members = [
    "crates/var",
    "crates/common",
    "crates/compiler",
    "crates/vm",
    "crates/kernel",
    "crates/objdef",
    "crates/db",
    "crates/textdump",
    "crates/runtime-api",
    "crates/zmq-client",
    "crates/schema",
    "crates/daemon",
    "crates/server",
    "crates/telnet-host",
    "crates/web-host",
    "crates/mcp-host",
    "crates/testing/moot",
    "crates/testing/load-tools",
    "crates/curl-worker",
    "tools/moor-emh",
    "tools/moorc",
]

[workspace.package]
authors = [
    "Ryan Daum <ryan.daum@gmail.com>",
]
categories = [
    "game",
    "virtual-world",
    "mud",
    "database",
    "programming-language",
]
edition = "2024"
keywords = [
    "mud",
    "programming-language",
    "virtual-world",
    "game",
    "virtual-machine",
]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/timbran-project/moor.git"
rust-version = "1.95.0"

[profile.release]
# The Rust compiler splits crates into multiple codegen units to parallelize (and thus speed up)
# compilation. However, this might cause it to miss some potential optimizations.
# You may be able to improve runtime speed and reduce binary size, at the cost of increased
# compile times, by setting the number of units to one.
codegen-units = 1
# Link-time optimization (LTO) is a whole-program optimization technique that can improve runtime
# speed by 10-20% or more, and also reduce binary size, at the cost of worse compile times.
lto = "fat"
# Having full debug info in release builds can be useful for debugging/profiling, but it will increase the size of
# the binary.
debug = "full"

# Faster release profile for testing/packaging where build time matters more than runtime optimization
[profile.release-fast]
inherits = "release"
codegen-units = 16 # Use default parallelism for faster compilation
lto = "thin" # Lighter LTO - faster to compile, still gets most benefits
debug = false # No debug symbols to save memory/disk during build

[workspace.dependencies]
# Core Runtime & System
libc = "0.2"
mimalloc = "0.1"
signal-hook = "0.4"

# Command Line & Configuration
clap = "4.5"
clap_derive = "4.5"

# Serialization & Data Formats
csv = "1.4"
edn-format = "3.3"
humantime = "2.3"
minicbor = { version = "2", features = ["alloc", "derive"] }
planus = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
xml-rs = "1.0"

# Database & Persistence
fjall = "3.1"
fs2 = "0.4"

# Networking & Communication
axum = { version = "0.8", features = ["ws"] }
hickory-resolver = "0.26"
ipnet = "2.11"
reqwest = { version = "0.12", default-features = false }
rustls-pemfile = "2.2"
socket2 = { version = "0.6", features = ["all"] }
tmq = "0.5"
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors"] }
tower_governor = "0.8"
webrtc = "0.17"
zmq = "0.10"

# Async Runtime & Concurrency
arc-swap = "1.9"
async-trait = "0.1"
boxcar = "0.2"
flume = "0.12"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink", "std"] }
hierarchical_hash_wheel_timer = { version = "1.4", default-features = false, features = ["fx-hash"] }
oneshot = { version = "0.2", default-features = false, features = ["std"] }
papaya = "0.2"
parking_lot = "0.12"
shuttle = "0.9"
tabled = "0.21"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Authentication & Security
age = "0.11"
argon2 = "0.5"
base32 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "signature"] }
hmac = "0.13"
md-5 = "0.11" # For MOO's "string_hash"
oauth2 = { version = "5.0", features = ["reqwest"] }
ripemd = "0.2"
rusty_paseto = { version = "0.10" }
sha1 = "0.11"
sha2 = "0.11"
ssh-key = "0.6"

# Time & Locale
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"

# Text Processing & Regex
arcstr = "1.2"
encoding_rs = "0.8"
natord = "1.0"
onig = { version = "6.5", default-features = false }
regex = "1.11"
scraper = "0.27"
strsim = "0.11"
unicase = "2.8"
unicode-width = "0.2"

# Compiler & Language Processing
ariadne = "0.6"
pest = "2.8"
pest_derive = "2.8"
proc-macro2 = "1.0"
quote = "1.0"
rowan = "0.16"
syn = { version = "2.0", features = ["full", "parsing"] }

# Collections & Data Structures
ahash = "0.8"
arrayvec = "0.7"
imbl = { version = "7.0", features = ["triomphe"] }
itertools = "0.15"
smallvec = "1.13"
triomphe = "0.1"

# Error Handling & Logging
color-eyre = "0.6"
eyre = "0.6"
log = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"

# Utilities & Helpers
bytes = "1.10"
byteview = "0.10"
diffy = "0.5"
hostname = "0.4"
micromeasure = "0.6"
paste = "1.0"
perf_event = { package = "perf-event2", version = "0.7" }
rand = "0.10"
semver = "1.0"
strum = { version = "0.28", features = ["derive"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
vergen = { version = "10", default-features = false, features = ["cargo"] }
vergen-gitcl = { version = "10", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

# Telemetry
fast-telemetry = "0.5"

# Testing & Development
criterion = { version = "0.8", features = ["async_tokio"] }
escargot = "0.5"
glob = "0.3"
md5 = "0.8"
pretty_assertions = "1.4"
proptest = "1.5"
serial_test = "3.2"
tempfile = "3.23"
test-case = "3.3"
test_each_file = "0.3"
unindent = "0.2"

# Terminal & UI
colored = "3.0"
crossterm = "0.29"
jotdown = { version = "0.10", default-features = false }
rustyline = "18.0"

# Patch to forked (maintained by me) version of ZeroMQ
[patch.crates-io]
zmq = { git = "https://github.com/rdaum/rust-zmq" }
age = { git = "https://github.com/str4d/rage", rev = "d1912012424ccb7b63172813ee2776cc570684fa" }
age-core = { git = "https://github.com/str4d/rage", rev = "d1912012424ccb7b63172813ee2776cc570684fa" }
