[package]
name = "moor-curl-worker"
version = "2.0.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A worker for initiating outbound HTTP or related requests"

[dependencies]
moor-common = { path = "../common" }
moor-var = { path = "../var" }
moor-zmq-client = { path = "../zmq-client" }
moor-runtime-api = { path = "../runtime-api" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

## General.
color-eyre.workspace = true
eyre.workspace = true

## Asynchronous transaction processing & networking
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio.workspace = true

## Utilities

## Logging & tracing
tracing.workspace = true

## ZMQ / RPC
tmq.workspace = true
uuid.workspace = true
