[package]
name = "moor-daemon"
version = "2.0.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Server binaries for the MooR virtual machine."

[package.metadata.deb]
maintainer = "Ryan Daum, operating as Timbran Consulting <ryan.daum@gmail.com>"
depends = "$auto, systemd, openssl"
conflicts = "moor"
replaces = "moor"
extended-description = "Daemon for the MooR virtual machine. This is the main process that runs the MooR VM and provides an RPC interface for clients to connect to."
section = "net"
license-file = ["../../LICENSE", "0"]
priority = "optional"
assets = [
    ["target/release/moor-daemon", "/usr/bin/moor-daemon", "755"],
    [
        "debian/moor-daemon.service",
        "/lib/systemd/system/moor-daemon.service",
        "644",
    ],
    ["debian/moor-daemon-config.yaml", "/etc/moor/daemon-config.yaml", "644"],
    [
        "../../cores/lambda-moor/**/*",
        "/usr/share/moor/cores/lambda-moor/",
        "644",
    ],
]
maintainer-scripts = "debian/scripts"
systemd-units = { enable = false }

[package.metadata.deb.variants.moor]
name = "moor"
depends = "$auto, systemd, openssl"
conflicts = "moor-daemon"
replaces = "moor-daemon"
extended-description = "Single-process MooR server. This package runs the daemon runtime, telnet host, and web host in one process."
assets = [
    ["target/release/moor", "/usr/bin/moor", "755"],
    ["debian/moor.service", "/lib/systemd/system/moor.service", "644"],
    ["debian/moor-config.yaml", "/etc/moor/moor-config.yaml", "644"],
    [
        "../../cores/lambda-moor/**/*",
        "/usr/share/moor/cores/lambda-moor/",
        "644",
    ],
]
maintainer-scripts = "debian/moor-scripts"
systemd-units = { enable = false }

[[bin]]
name = "moor-daemon"
path = "src/bin/moor-daemon.rs"

[[bin]]
name = "moor"
path = "src/bin/moor.rs"

[dependencies]
# Telemetry
fast-telemetry.workspace = true

# Internal Dependencies
moor-common = { path = "../common" }
moor-compiler = { path = "../compiler" }
moor-curl-worker = { path = "../curl-worker" }
moor-db = { path = "../db" }
moor-kernel = { path = "../kernel" }
moor-objdef = { path = "../objdef" }
moor-schema = { path = "../schema" }
moor-telnet-host = { path = "../telnet-host" }
moor-textdump = { path = "../textdump" }
moor-var = { path = "../var" }
moor-web-host = { path = "../web-host" }
moor-runtime-api = { path = "../runtime-api" }

# Core Runtime & System
mimalloc.workspace = true
signal-hook.workspace = true

# Command Line & Configuration
clap.workspace = true
clap_derive.workspace = true
planus.workspace = true
serde.workspace = true
serde_json.workspace = true

# Database & Persistence
fjall.workspace = true
fs2.workspace = true
zerocopy.workspace = true

# Networking & Communication
tmq.workspace = true
zmq.workspace = true

# Async Runtime & Concurrency
async-trait.workspace = true
flume.workspace = true
oneshot.workspace = true
papaya.workspace = true
tokio.workspace = true

# Authentication & Security
age.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rusty_paseto.workspace = true
sha2.workspace = true

# Error Handling & Logging
color-eyre.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities & Helpers
ahash.workspace = true
byteview.workspace = true
chrono.workspace = true
rand.workspace = true
semver.workspace = true
uuid.workspace = true

# Testing & Development
tempfile.workspace = true

[features]
trace_events = ["moor-kernel/trace_events"]
