[package]
name = "moor-runtime-api"
version = "2.0.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Typed host/runtime API and wire codec support for Moor runtime clients."

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-schema = { path = "../schema" }
moor-var = { path = "../var" }

# Command Line & Configuration
clap.workspace = true
clap_derive.workspace = true

# Serialization & Data Formats
byteview.workspace = true
planus.workspace = true
serde.workspace = true

# Authentication & Security
ed25519-dalek.workspace = true
rusty_paseto.workspace = true

# Error Handling
thiserror.workspace = true

# Utilities & Helpers
async-trait.workspace = true
uuid.workspace = true

tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["task-client"]
task-client = ["tokio", "tracing"]
