[package]
name = "moor-server"
version = "2.0.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Single-process server binary for the MooR virtual machine."

[package.metadata.deb]
name = "moor"
maintainer = "Ryan Daum, operating as Timbran Consulting <ryan.daum@gmail.com>"
depends = "$auto, systemd, openssl"
conflicts = "moor-daemon"
replaces = "moor-daemon"
extended-description = "Single-process MooR server. This package runs the daemon runtime, telnet host, and web host in one process."
section = "net"
license-file = ["../../LICENSE", "0"]
priority = "optional"
assets = [
    ["target/release/moor", "/usr/bin/moor", "755"],
    ["debian/moor.service", "/lib/systemd/system/moor.service", "644"],
    ["debian/moor-config.yaml", "/etc/moor/moor-config.yaml", "644"],
    [
        "../../cores/lambda-moor/**/*",
        "/usr/share/moor/cores/lambda-moor/",
        "644",
    ],
]
maintainer-scripts = "debian/scripts"

[[bin]]
name = "moor"
path = "src/main.rs"

[dependencies]
moor-common = { path = "../common" }
moor-curl-worker = { path = "../curl-worker" }
moor-daemon = { path = "../daemon" }
moor-db = { path = "../db" }
moor-kernel = { path = "../kernel" }
moor-runtime-api = { path = "../runtime-api" }
moor-telnet-host = { path = "../telnet-host" }
moor-var = { path = "../var" }
moor-web-host = { path = "../web-host" }

async-trait.workspace = true
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
eyre.workspace = true
flume.workspace = true
mimalloc.workspace = true
oneshot.workspace = true
rusty_paseto.workspace = true
semver.workspace = true
serde.workspace = true
signal-hook.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zmq.workspace = true

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true

[features]
trace_events = ["moor-daemon/trace_events"]
