[package]
name = "meadow"
version = "2.0.0-dev"
authors = ["Ryan Daum <ryan.daum@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://codeberg.org/timbran/meadow"
description = "Modern desktop client for mooR"

[workspace]

[lib]
name = "meadow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-cors-fetch = "5"
tauri-plugin-opener = "2"
